--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-/* a minimalist set of CSS resets */
+/* Angel Williams */
+/*CodePath SITE Prework: Light and Sound Memory Game (css file)*/
 
-/* default to border-box */
+/* general formatting for window*/
 html {
   box-sizing: border-box;
   font-size: 16;
@@ -10,7 +11,7 @@ html {
   box-sizing: 10%;
 }
 
-/* adjust typography defaults */
+/* set body design */
 body {
   margin: 2rem;
   font-family: sans-serif;
@@ -18,7 +19,7 @@ body {
   background-color: #1d1716; 
   color: pink;
 }
-
+/*set h1 design*/
 h1 {
   font-family: brush script mt, comic-sans, arial, sans-serif;
   text-decoration: white dotted underline;
@@ -31,7 +32,7 @@ h1 {
   font-size: 95px;
   box-shadow: 0 5px 3px 0 white, 0 8px 24px white;
 }
-
+/*set p design*/
 p {
   font-family: century gothic, sans-serif;
   background-color: #9d0b28; 
@@ -44,16 +45,17 @@ p {
   font-weight: bold;
   box-shadow: 0 5px 3px 0 white, 0 8px 24px black;
 }
-
+/*general button designs*/
 button { 
   padding: 10%;
   border-radius: 50px;  
   font-family: century gothic, sans-serif;
 }
-
+/*game button specific designs*/
 #gameButtonArea {
   text-align: center;
 }
+/*start and stop button format*/
 #startBtn {
   padding: 2%;
   background-color: #ff004d;
@@ -73,7 +75,7 @@ button {
   font-size: 22px;
   font-weight: bold;
 }
-
+/*playable game button designs*/
 #gameButtonArea > button {
   width: 100px;
   height: 15px;
@@ -82,11 +84,11 @@ button {
   border-color: white;
   box-shadow: 0 5px 3px 0 white, 0 8px 24px white;
 }
-
+/*define hidden class for start and stop buttons*/
 .hidden{
   display: none;
 }
-
+/*set game button colors and highlight colors*/
 #button1{
   background: #6e386e;
 }
@@ -116,6 +118,7 @@ button {
 }
 
 /* images and videos max out at full width */
+/*There are no imported images or video but I will save this portion as I plan to continue working and adding images later*/
 img,
 video {
   height: auto;
