--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ button {
 }
 
 /* images and videos max out at full width */
-/*There are no imported images or video but I will save this portion as I plan to continue working and adding images later*/
+/*There are no imported images or video but I will save this portion for an expanded version of this project*/
 img,
 video {
   height: auto;
